Closed
Bug 180841
Opened 23 years ago
Closed 22 years ago
Some GTK2 embedding specific code not #ifdef'ed and crashing GTK1 embedding
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mozillabugs.philipl, Assigned: blizzard)
References
Details
(Keywords: embed)
Attachments
(1 file)
|
536 bytes,
patch
|
Details | Diff | Splinter Review |
Part of the merged gtk2 embedding code is being used in gtk1 embedding which is
inappropriate and causing crashes in galeon (when closing the right most tab).
This can easily be fixed by #ifdef guarding the single line of code.
I will attach a patch accordingly.
| Reporter | ||
Comment 1•23 years ago
|
||
| Assignee | ||
Comment 2•23 years ago
|
||
Can you tell me why this is causing crashes? It's not causing crashes here and
I don't see the harm in that code.
Comment 3•23 years ago
|
||
I don't know why it would be crashing, I only noticed that was virtually the
only addition in the gtk1 code by the gtk2 port. Maybe it's simply triggering
some obscure (un)realization bug somewhere. It is rather obscure to start with
if it crashes only when closing the rightmost tab.
Comment 4•23 years ago
|
||
Changing keyword from topembed (which is used internally for Netscape products)
to embed. Blizzard - if you feel strongly about the topembed keyword, renominate
and we will talk about it with you.
| Reporter | ||
Comment 5•23 years ago
|
||
I blew away my source tree last week and checked out a fresh one and forgot to
apply this fix and it left me very frustrated until I remembered what I had to
do. This is still a very real problem.
| Reporter | ||
Comment 6•22 years ago
|
||
Well, we have fixed this one by explicitly setting the flag that gtkmozembed
tries to unset. This is a work-around, not a fix, IMHO. If the widget is trying
to clear a flag on itself, it should be setting it on itself and not hoping that
the embedding app will...
| Assignee | ||
Comment 7•22 years ago
|
||
Ahh, this fell off my radar because it wasn't linked to the tracking bug.
Blocks: gtk2
| Assignee | ||
Comment 8•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•