Bug #180841.  gtk2-specific call can sometimes crash gtk1.2 embedding widget.  patch from philipl@mail.utexas.edu.  r+sr=blizzard